# sdk

./: .editorconfig  .gitignore  README.md  default.nix  default2.nix  flake.nix  garnix.yaml  meson.build  meson_options.txt  setup-hook.sh
.github/: FUNDING.yml
.github/workflows/: backport.yml  commit.yml  direct-push.yml  flake.yaml  nix.yaml
data/: expidus-sdk.pc.in  flake-registry.json  meson.build
doc/: Makefile  default.nix  functions.xml  manual.xml  preface.chapter.md
doc/doc-support/: default.nix  lib-function-docs.nix  lib-function-locations.nix
doc/functions/: expidus-library.section.md  library.xml
lib/: channels.nix  default.nix  extend.nix  fixed-points.nix  flake.nix  maintainers.nix  nix-config.nix  nixpkgs-darwin.nix  nixpkgs.nix  overlay.nix  pkgs-base.nix  pkgs-extend.nix  pkgs.nix  system.nix  trivial.nix  types.nix
lib/channels/: default.nix  disko.nix  home-manager.nix  mobile-nixos.nix  nixpkgs.nix
lib/expidus/: default.nix  system.nix  trivial.nix  types.nix
maintainers/scripts/: all-tarballs.nix  eval-release.nix  eval-release.sh  find-tarballs.nix
nixos/: base.nix  default.nix  dev.nix  release.nix
nixos/doc/manual/: default.nix  man-configuration.xml  man-pages.xml  manual.xml  shell.nix
nixos/doc/manual/development/: writing-documentation.chapter.md
nixos/doc/manual/from_md/development/: writing-documentation.chapter.xml
nixos/lib/: default.nix  eval-cacheable-options.nix  eval-config-minimal.nix  eval-config.nix  from-env.nix  make-channel.nix  make-system-tarball.nix  utils.nix
nixos/lib/make-options-doc/: default.nix  options-to-docbook.xsl
nixos/modules/: module-list.nix
nixos/modules/installer/: virtualbox-demo.nix
nixos/modules/installer/cd-dvd/: channel.nix  installation-cd-base.nix  installation-cd-graphical-base.nix  installation-cd-graphical-calamares-genesis.nix  installation-cd-graphical-calamares-gnome.nix  installation-cd-graphical-calamares-plasma5.nix  installation-cd-graphical-calamares.nix  installation-cd-graphical-gnome.nix  iso-image.nix  system-tarball-pc.nix  system-tarball.nix
nixos/modules/installer/scan/: not-detected.nix
nixos/modules/installer/sd-card/: sd-image-aarch64-installer.nix  sd-image-aarch64.nix  sd-image-raspberrypi-installer.nix  sd-image-raspberrypi.nix  sd-image.nix
nixos/modules/installer/tools/: expidus-version.sh  tools.nix
nixos/modules/misc/: assertions.nix  documentation.nix  expidus-documentation.nix  label.nix  meta.nix  nixpkgs.nix  version.nix
nixos/modules/profiles/: docker-container.nix  installation-device.nix
nixos/modules/programs/: expidus-terminal.nix
nixos/modules/programs/flatpak/: default.nix
nixos/modules/security/: expidus.nix  wrappers.nix
nixos/modules/security/apparmor/: includes.nix  profiles.nix
nixos/modules/services/editors/: emacs.xml
nixos/modules/services/misc/: gitit.nix  nix-daemon.nix
nixos/modules/services/ttys/: getty.nix
nixos/modules/services/x11/desktop-managers/: genesis.nix
nixos/modules/system/: device.nix  expidus.nix
nixos/modules/system/activation/: no-clone.nix  switch-to-configuration.pl  top-level.nix
nixos/modules/system/boot/: stage-1-init.sh  stage-1.nix  stage-2-init.sh  stage-2.nix
nixos/modules/system/boot/loader/: efi.nix
nixos/modules/system/etc/: etc.nix  setup-etc.pl
nixos/modules/tasks/: network-interfaces.nix
nixos/modules/virtualisation/: lxc-container.nix  qemu-vm.nix
pkgs/: base.nix  default.nix  extend.nix  make-channel.nix  overlay.nix
pkgs/applications/emulators/darling/: default.nix
pkgs/applications/misc/nwg-drawer/: default.nix
pkgs/applications/terminal-emulators/expidus-terminal/: default.nix
pkgs/build-support/build-expidus-package/: default.nix
pkgs/build-support/dartvendor/: default.nix
pkgs/build-support/fetchcipd/: builder.sh  default.nix
pkgs/build-support/fetchpubdev/: default.nix
pkgs/build-support/flatpak/: default.nix
pkgs/build-support/mkshell/: default.nix
pkgs/desktops/genesis-shell/: default.nix  deps.json
pkgs/development/libraries/cssparser/: default.nix
pkgs/development/libraries/gtk-layer-shell/: default.nix
pkgs/development/libraries/gxml/: default.nix
pkgs/development/libraries/libdevident/: default.nix
pkgs/development/libraries/libtokyo/: default.nix
pkgs/development/libraries/libvpx/: default.nix
pkgs/development/libraries/neutron/: default.nix
pkgs/development/libraries/ntk/: default.nix
pkgs/development/libraries/vadi/: default.nix
pkgs/development/misc/flutter-engine/: default.nix  deps.nix  flutter-engine.pc  package.nix
pkgs/development/tools/cipd/: default.nix
pkgs/development/tools/depot_tools/: default.nix
pkgs/development/tools/expidus-sdk/: default.nix
pkgs/development/tools/gclient-wrapped/: default.nix
pkgs/pkgs-lib/: default.nix
pkgs/stdenv/expidus/: default.nix  make-derivation.nix
pkgs/tools/nix/nixos-install-tools/: default.nix
pkgs/top-level/: all-packages.nix  config.nix  default.nix  expidus-packages.nix  make-channel.nix  make-tarball.nix  nix-packages.nix  overlay.nix  patch-packages.nix  release.nix
pkgs/top-level/nixpkgs/: config.nix  default.nix  impure.nix
profile.d/: expidus-sdk.sh.in  meson.build
system/: meson.build
system/data/: lsb-release.in  os-release.in
system/po/: LINGUAS  POTFILES.in  en.po  en_US.po  ja.po  meson.build
system/src/: config.vala.in  expidus-sdk.h.in  expidus-version.vala
system/vapi/: expidus-sdk.vapi
variants/: default.nix
variants/mainline/: default.nix
variants/mainline/lib/: make-datafs.nix  make-efipart.nix  make-rootfs.nix
variants/mainline/modules/: default.nix  defaults.nix  disabled.nix  utils.nix
variants/mainline/modules/security/: lsm.nix  selinux.nix  wrappers.nix
variants/mainline/modules/system/: config.nix  users.nix  vendor-config.nix  version.nix
variants/mainline/modules/tasks/: network-interfaces.nix
variants/mainline/modules/virtualisation/: nixos-containers.nix
wrappers/: meson.build
wrappers/data/: .zshenv  clang-format
wrappers/lib/: ensure.sh.in  meson.build
(+38 files in other folders)
